# Kxnrl.Message.Extension

./: .gitignore  .gitmodules  .travis.yml  AMBuildScript  AMBuilder  BUILD_NOTES.txt  CMakeLists.txt  CMakeSettings.json  README.md  SendQueue.h  build.bat  build.py  build.sh  configure.py  extension.cpp  extension.h  message.h  natives.cpp  natives.h  smsdk_config.h  websocket.cpp  websocket.h
cmake/: smsdk_ext.cmake
lib/: libboost_random-vc141-mt-s-x32-1_68.lib
lib/win32/: jsoncpp.lib  libboost_chrono-vc142-mt-s-x32-1_71.lib  libboost_chrono-vc142-mt-s-x32-1_73.lib  libboost_date_time-vc142-mt-s-x32-1_71.lib  libboost_date_time-vc142-mt-s-x32-1_73.lib  libboost_random-vc142-mt-s-x32-1_73.lib  libboost_system-vc142-mt-s-x32-1_71.lib  libboost_system-vc142-mt-s-x32-1_73.lib  libboost_thread-vc142-mt-s-x32-1_71.lib  libboost_thread-vc142-mt-s-x32-1_73.lib
msvc/: Kxnrl.Message.sln  Kxnrl.Message.vcxproj  Kxnrl.Message.vcxproj.filters
msvc15/: Kxnrl.Message.sln  Kxnrl.Message.vcxproj  Kxnrl.Message.vcxproj.filters
sdk/: smsdk_config.h
sourcepawn/: kxnrl.message.inc
vcpkg_triplet/: x86-linux-sm.cmake  x86-windows-sm.cmake
wrappers/msvc/: typeinfo.h
